# agent-risk-firewall

./: .gitignore  README.md
skills/agent-risk-firewall/: LICENSE  README.md  SKILL.md  SUMMARY.md  plugin.yaml  pyproject.toml
skills/agent-risk-firewall/.claude-plugin/: plugin.json
skills/agent-risk-firewall/scripts/: clean.ps1  clean.py
skills/agent-risk-firewall/src/agent_risk_firewall/: adapters.py  cli.py  models.py  policy.py  render.py
skills/agent-risk-firewall/tests/: test_cli.py  test_golden_fixtures.py  test_policy.py  test_policy_improvements.py
skills/agent-risk-firewall/tests/fixtures/: simulation_revert.json  token_critical.json  token_high.json  tx_scan_block.json  tx_scan_warn.json
skills/agent-workflow-composer/: .gitignore  LICENSE  README.md  SKILL.md  SUMMARY.md  plugin.yaml  pyproject.toml
skills/agent-workflow-composer/.claude-plugin/: plugin.json
skills/agent-workflow-composer/src/agent_workflow_composer/: cli.py  composer.py  models.py  render.py
skills/agent-workflow-composer/tests/: test_cli.py  test_composer.py
skills/safe-competition-trading-agent/: .gitignore  LICENSE  README.md  SKILL.md  SUMMARY.md  plugin.yaml  pyproject.toml
skills/safe-competition-trading-agent/.claude-plugin/: plugin.json
skills/safe-competition-trading-agent/src/safe_competition_trading_agent/: candidate_selector.py  cli.py  models.py  planner.py  render.py  risk_bridge.py
skills/safe-competition-trading-agent/tests/: test_candidate_selector.py  test_planner.py  test_safe_competition_cli.py
